--- a/css/style.css
+++ b/css/style.css
@@ -866,7 +866,7 @@ footer p{
 }
 /************** End footer *******************/
 .loading{
-  background-color: #1c1c1cec;
+  background-color: #1c1c1c;
   width: 100%;
   height: 100%;
   position: fixed;
